# orca

./: .gitignore  LICENSE  Makefile  README.md
.cargo/: config
doc/: Page-Memory-System.md
easy-fs/: Cargo.toml
easy-fs-fuse/: Cargo.toml
easy-fs-test-by-rcore/src/: main.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  layout.rs  lib.rs  vfs.rs
kernel/: Cargo.toml  Makefile  build.rs  link_app.S
kernel/src/: batch.rs  config.rs  console.rs  entry.S  kernel.ld  lang_item.rs  link_app.S  load.rs  loader.rs  main.rs  orca_logo.rs  orca_logo.txt  sbi.rs  stack.rs  timer.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs  virtio_blk.rs
kernel/src/fs/: inode.rs  mod.rs  stdio.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/sync/: mod.rs  uniproc.rs
kernel/src/syscall/: fs.rs  mod.rs  proc.rs  process.rs
kernel/src/task/: context.rs  kernel_stack.rs  mod.rs  pid.rs  processor.rs  scheduler.rs  switch.S  switch.rs  task.rs
kernel/src/test/: mm_test.rs  mod.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
src/: console.rs  lang_item.rs  main.rs  orca_logo.rs  orca_logo.txt
user/: Cargo.toml  Makefile  build.py
user/.cargo/: config
user/src/: console.rs  heap_allocator.rs  lang_item.rs  lib.rs  linker.ld  osh.rs  syscall.rs
